--- a/style.css
+++ b/style.css
@@ -1,72 +1,87 @@
 /* Import Google Font - Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-*{
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-.day{
-    text-align: center;
-    margin-bottom: 20px;
-    color: #fff;
+
+.day {
+  text-align: center;
+  margin-bottom: 20px;
+  color: #fff;
 }
-body{
+
+body {
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
   background: #fff;
 }
-::selection{
+
+::selection {
   color: #000;
   background: #fff;
 }
-.wrapper{
+
+.wrapper {
   width: 500px;
   padding: 25px 30px;
   border-radius: 7px;
   background: #000;
-  box-shadow: 7px 7px 20px rgba(0,0,0,0.05);
+  margin: 50px 0;
+  box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.05);
 }
-.wrapper header{
+
+.wrapper header {
   font-size: 28px;
   font-weight: 500;
   text-align: center;
 }
-.wrapper form{
+
+.wrapper form {
   margin: 35px 0 20px;
 }
-form .row{
+
+form .row {
   display: flex;
   margin-bottom: 20px;
   flex-direction: column;
 }
-form .row label{
+
+form .row label {
   font-size: 18px;
   margin-bottom: 5px;
 }
-form .row:nth-child(2) label{
+
+form .row:nth-child(2) label {
   font-size: 17px;
 }
-form :where(textarea, select, button){
+
+form :where(textarea, select, button) {
   outline: none;
   width: 100%;
   height: 100%;
   border: none;
   border-radius: 5px;
 }
-form .row textarea{
+
+form .row textarea {
   resize: none;
   height: 110px;
   font-size: 15px;
   padding: 8px 10px;
   border: 1px solid #999;
 }
-form .row textarea::-webkit-scrollbar{
+
+form .row textarea::-webkit-scrollbar {
   width: 0px;
 }
-form .row .outer{
+
+form .row .outer {
   height: 47px;
   display: flex;
   padding: 0 10px;
@@ -75,22 +90,27 @@ form .row .outer{
   justify-content: center;
   border: 1px solid #999;
 }
-form .row select{
+
+form .row select {
   font-size: 14px;
   background: none;
 }
-form .row select::-webkit-scrollbar{
+
+form .row select::-webkit-scrollbar {
   width: 8px;
 }
-form .row select::-webkit-scrollbar-track{
+
+form .row select::-webkit-scrollbar-track {
   background: #fff;
 }
-form .row select::-webkit-scrollbar-thumb{
+
+form .row select::-webkit-scrollbar-thumb {
   background: #888;
   border-radius: 8px;
   border-right: 2px solid #000;
 }
-form button{
+
+form button {
   height: 52px;
   color: #000;
   font-weight: 500;
@@ -100,16 +120,20 @@ form button{
   background: #fff;
   transition: 0.3s ease;
 }
-header{
+
+header {
   color: #fff;
 }
-label{
+
+label {
   color: white;
 }
-select{
+
+select {
   color: white !important;
   background: #000 !important;
 }
+
 /* form button:hover{
   background: #4534fe;
 } */
@@ -121,14 +145,15 @@ select{
   }
 } */
 @media (min-width: 280px) and (max-width: 575px) {
-    .wrapper{
-        width: 95%;
-    }
-    .day{
-        font-size: 10px;
-    }
-    header{
-        text-transform: uppercase;
-    }
+  .wrapper {
+    width: 95%;
+  }
+
+  .day {
+    font-size: 10px;
+  }
+
+  header {
+    text-transform: uppercase;
+  }
 }
-    
